# vision_diffuser

./: .gitignore  pyproject.toml  requirements.txt  setup.py
configs/: cldm_train_64.yaml  ddim_train_64.yaml  e2e_ldm_train_64.yaml  eval_dps_ddim_ffhq_10m_256.yaml  ldm_train_64.yaml  sr3_ddim_train_32_256.yaml  train_cldm_64.yaml  train_ddim_256.yaml  train_ddim_64.yaml  train_e2e_ldm_64.yaml  train_ldm_64.yaml  train_sr3_ddim_16_128.yaml  train_sr3_ddim_32_256.yaml  train_vae_adversarial_256.yaml  train_vae_adversarial_64.yaml
evaluators/: eval_dps_ddim.py
lightning_logs/version_0/: events.out.tfevents.1746570718.sri-gpu-8h100.2195217.0  hparams.yaml
train_scripts/: train_cldm.py  train_ddim.py  train_e2e_ldm.py  train_ldm.py  train_sr3_ddim.py
trainer/: callback_template.py  simple_trainer.py
trainer/boats/: basic_boat.py
trainer/callbacks/: commons.py
trainer/loggers.py/: tensorboard.py
trainer/utils/: build_components.py  path_helpers.py  state_load_save.py
trainers/: train_adversarial_vae.py  train_cldm.py  train_ddim.py  train_e2e_ldm.py  train_ldm.py  train_sr3_ddim.py
utils/: downsample_x4.py  manual_captioning.py  manual_feature_vector.py  random_picks.py
vision/condition_generators/: simple_generating.py
vision/data_modules/: image_data_module.py
vision/distortions/: linear_ops.py  noiser.py  nonlinear_ops.py  test.py
vision/networks/: autoencoder_wrappers.py  unet_2d_simple_condition.py
vision/schedulers/: scheduling_ddim.py
vision/solvers/: guided_ddim.py  sampling_conditioned_ddim.py  sampling_ddim.py
(+16 files in other folders)
